huginn/postgres/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: huginn-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      name: huginn-postgres
  template:
    metadata:
      labels:
        name: huginn-postgres
    spec:
      containers:
        - image: image_prefix:postgres
          name: huginn-postgres
          securityContext:
            runAsNonRoot: true
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 256Mi
          ports:
            - name: postgres
              containerPort: 5432
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -d
                - $POSTGRES_DB
                - -h
                - localhost
                - -U
                - $POSTGRES_USER
          livenessProbe:
            tcpSocket:
              port: postgres
            initialDelaySeconds: 60
          volumeMounts:
            - name: huginn-postgres
              mountPath: /var/lib/postgresql/data
              readOnly: false
      restartPolicy: Always
      volumes:
        - name: huginn-postgres
          persistentVolumeClaim:
            claimName: huginn-postgres
