huginn/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: huginn-postgres
spec:
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: postgres
  selector:
    name: huginn-postgres
