huginn/postgres/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: huginn-postgres
spec:
  podSelector:
    matchLabels:
      name: huginn-postgres
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: huginn-worker
        - podSelector:
            matchLabels:
              name: huginn-web
      ports:
        - protocol: TCP
          port: 5432
